# automatic_test

./: .gitignore  pyproject.toml  test_hello.py  tools.py
tests/: test_Inquiry.py
