[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "automatic-test"        # 随便命名，但必须符合 PEP 621 规范
version = "0.0.1"              # 版本号随意
description = "Internal automatic test project"
requires-python = ">=3.8"
dependencies = [
  "pytest>=8.0",
  "playwright>=1.44"
]

[project.optional-dependencies]
dev = ["black", "flake8"]